fix(button): fix shape of delete buttons on Safari (hopefully)

--- a/src/scss/components/_user-story.scss
+++ b/src/scss/components/_user-story.scss
@@ -21,7 +21,9 @@
 		&::after {
 			@include pseudo($content: url("/src/images/design/cross.svg"));
 			top: rem(2px);
-			left: rem(2px);
+			left: 0;
+			width: 100%;
+			height: 100%;
 			border-radius: 50%;
 		}
 
